// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomRadiowidget renders the component with initial values 1`] = `
<div>
  <div
    class="custom-radio-widget"
    data-testid="custom-radio-widget"
  >
    <div
      class="field-label-box"
    >
      <span
        class="metadata-editor-field-label"
        data-testid="custom-radio-widget--label"
      >
        Title
      </span>
      <span />
    </div>
    <input
      checked=""
      data-testid="custom-radio-widget--value__true"
      type="radio"
    />
    <label>
      True
    </label>
    <br />
    <input
      data-testid="custom-radio-widget--value__false"
      type="radio"
    />
    <label>
      False
    </label>
  </div>
</div>
`;

exports[`CustomRadiowidget should call the onChange function with false when "False" radio button is clicked 1`] = `
<div>
  <div
    class="custom-radio-widget"
    data-testid="custom-radio-widget"
  >
    <div
      class="field-label-box"
    >
      <span
        class="metadata-editor-field-label"
        data-testid="custom-radio-widget--label"
      />
      <span />
    </div>
    <input
      checked=""
      data-testid="custom-radio-widget--value__true"
      type="radio"
    />
    <label>
      True
    </label>
    <br />
    <input
      data-testid="custom-radio-widget--value__false"
      type="radio"
    />
    <label>
      False
    </label>
  </div>
</div>
`;

exports[`CustomRadiowidget should call the onChange function with true when "True" radio button is clicked 1`] = `
<div>
  <div
    class="custom-radio-widget"
    data-testid="custom-radio-widget"
  >
    <div
      class="field-label-box"
    >
      <span
        class="metadata-editor-field-label"
        data-testid="custom-radio-widget--label"
      />
      <span />
    </div>
    <input
      data-testid="custom-radio-widget--value__true"
      type="radio"
    />
    <label>
      True
    </label>
    <br />
    <input
      checked=""
      data-testid="custom-radio-widget--value__false"
      type="radio"
    />
    <label>
      False
    </label>
  </div>
</div>
`;
